[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Sprites/UI/HealthBarFill.png" type="Texture" id=1]
[ext_resource path="res://Scenes/HitBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Enemies/Enemy.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sprites/UI/HealthBarOver.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/UI/HealthBar.png" type="Texture" id=5]

[node name="Enemy" type="KinematicBody2D"]
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 3 )

[node name="EnemySprite" type="Sprite" parent="."]
position = Vector2( 9.64595, 9.27151 )
rotation = -3.14159
scale = Vector2( 1.5, 1.5 )

[node name="HitBox" parent="." instance=ExtResource( 2 )]
collision_layer = 12
collision_mask = 19

[node name="Health_bar" type="TextureProgress" parent="."]
anchor_right = 0.5
margin_right = 32.0
margin_bottom = 8.0
rect_scale = Vector2( 0.6, 0.4 )
value = 100.0
rounded = true
texture_under = ExtResource( 5 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 1 )
tint_progress = Color( 0.313726, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]

[editable path="HitBox"]
